force-app/main/default/objects/ssot__AbnExperimentLog__dlm/fields/ssot__AbnExperimentCohortId__c.field-meta.xml
<CustomField>
    <fullName>ssot__AbnExperimentCohortId__c</fullName>
    <label>Experiment Cohort</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AbnExperimentCohortId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>