force-app/main/default/objects/ssot__AbnExperimentLog__dlm/fields/ssot__Individualid__c.field-meta.xml
<CustomField>
    <fullName>ssot__Individualid__c</fullName>
    <label>Individual</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Individualid</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>