force-app/main/default/objects/ssot__AbnExperimentLog__dlm/fields/ssot__PersonalizationDecisionId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PersonalizationDecisionId__c</fullName>
    <label>Personalization Decision</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PersonalizationDecisionId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>