force-app/main/default/objects/ssot__AbnExperimentLog__dlm/fields/ssot__PersonalizationId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PersonalizationId__c</fullName>
    <label>Personalization Id</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PersonalizationId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>