force-app/main/default/objects/ssot__AbnExperimentLog__dlm/fields/ssot__PoolAssignmentNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__PoolAssignmentNumber__c</fullName>
    <label>Pool Assignment</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PoolAssignmentNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>