force-app/main/default/objects/ssot__AbnExperimentLog__dlm/fields/ssot__rel_1720842258592_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720842258592_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AbnExperimentLog_PersonalizationDeci_rel</label>
    <referenceTo>ssot__PersonalizationDecision__dlm</referenceTo>
    <relationshipLabel>AbnExperimentLog_PersonalizationDeci_rel</relationshipLabel>
    <relationshipName>rel_1720842258592_end</relationshipName>
    <type>Lookup</type>
</CustomField>