force-app/main/default/objects/ssot__AbnExperimentLog__dlm/fields/ssot__UnifiedIndividualId__c.field-meta.xml
<CustomField>
    <fullName>ssot__UnifiedIndividualId__c</fullName>
    <label>Unified Individual</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>UnifiedIndividualId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>